<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
    xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
    <artifactId>teami-polydiploma-war</artifactId>
    <version>1.0</version>
    <packaging>war</packaging>

    <name>teami-polydiploma-war</name>

    <repositories>
        <repository>
            <id>teami</id>
            <url>http://vps663090.ovh.net:8081/artifactory/libs-release</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>teami</id>
            <url>http://vps663090.ovh.net:8081/artifactory/libs-release</url>
        </repository>
    </distributionManagement>

    <properties>
        <versions.guest-manager>1.0</versions.guest-manager>
        <versions.notification>1.1</versions.notification>
        <versions.entities>1.3</versions.entities>
        <versions.register>1.0</versions.register>
        <versions.ceremony-manager>1.2</versions.ceremony-manager>
        <versions.planning>1.0</versions.planning>
        <versions.interlude-manager>1.0</versions.interlude-manager>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <versions.javaee>7.0-1</versions.javaee>
        <versions.openejb>7.0.2</versions.openejb>
        <versions.tomee>7.0.2</versions.tomee>
        <versions.junit>4.12</versions.junit>
        <versions.cukespace>1.6.5</versions.cukespace>
        <versions.arquillian.junit>1.1.12.Final</versions.arquillian.junit>
    </properties>

    <dependencies>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-notification</artifactId>
            <version>${versions.notification}</version>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-register</artifactId>
            <version>${versions.register}</version>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-polydiploma-entities</artifactId>
            <version>${versions.entities}</version>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-guest-manager</artifactId>
            <version>${versions.guest-manager}</version>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-ceremony-manager</artifactId>
            <version>${versions.ceremony-manager}</version>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-planning</artifactId>
            <version>${versions.planning}</version>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.si4.isa.devops.teami</groupId>
            <artifactId>teami-interlude-manager</artifactId>
            <version>${versions.interlude-manager}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${versions.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${versions.javaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-core</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf-rs</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cukespace</groupId>
            <artifactId>cukespace-core</artifactId>
            <version>${versions.cukespace}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>${versions.arquillian.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>arquillian-tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>teami-polydiploma</finalName>
        <defaultGoal>package</defaultGoal>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <!-- build war -->
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomee.maven</groupId>
                    <artifactId>tomee-maven-plugin</artifactId>
                    <version>${versions.tomee}</version>
                    <configuration>
                        <tomeeClassifier>plus</tomeeClassifier>
                        <args>-Xmx512m -XX:PermSize=256m</args>
                        <deployOpenEjbApplication>true</deployOpenEjbApplication>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.openjpa</groupId>
                    <artifactId>openjpa-maven-plugin</artifactId>
                    <version>${versions.openjpa}</version>
                    <configuration>
                        <includes>**/entities/*.class</includes>
                        <addDefaultConstructor>true</addDefaultConstructor>
                        <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
                    </configuration>
                    <executions>
                        <execution>
                            <id>enhancer</id>
                            <phase>process-classes</phase>
                            <goals>
                                <goal>enhance</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
